Refactor PlaceholderHook and bump project version to 2.1
Rewrote placeholder logic using a switch expression for better readability and efficiency. Introduced utility methods for formatting KD and counting totems. Updated dependencies, including a version downgrade for Lombok, and added a new repository for PlaceholderAPI.